# voxedge

./: .gitignore  LICENSE  MODELS.md  README.md
.github/workflows/: ci.yml
apps/android/: .gitignore  README.md  build.gradle.kts  prepare_jnilibs.ps1  settings.gradle.kts
apps/android/native/: CMakeLists.txt
apps/android/native/llm/: genie_llm.cpp
apps/android/native/tts_engine/: build_tts_engine.sh  supertonic_tts_engine.cpp
apps/ios/: README.md
converter/phase0/: README.md  checksums.sha256  download_report.md  fetch_sources.sh  model_sources.json
converter/phase1/: README.md  build_tts_short_chunk.sh  check_wsl_python_modules.py  convert_gemma4_onnx_to_qnn_contexts.sh  convert_tts_float_only.sh  convert_tts_onnx_to_dlc.sh  create_minimal_qairt_probe_models.py  diagnose_tts_graph.py  export_gemma4_text_onnx.py  fetch_gemma4_litert_lm.sh  fetch_gemma4_onnx_community.sh  fetch_qairt_runtime_libs.sh  fetch_qwen3_4b_instruct_2507_genie_bundle.sh  gemma4_direct_qnn_plan.md  generate_random_tts_calibration.py  generate_representative_tts_calibration.py  graph_prepare_tts_float.sh  inspect_gemma4_qnn_contract.py  inspect_onnx_inputs.py  llm_export_plan.md  model_preparation.json  preparation_report.md  prepare_qairt_workspace.sh  prepare_tts_static_onnx.py  quantize_tts_t64_l128.sh  qwen3_4b_instruct_2507_genie_plan.md  rewrite_gemma4_onnx_for_qnn.py  rewrite_tts_onnx_for_qairt.py  setup_gemma4_onnx_wsl_venv.sh  (+7 more)
docs/: ARCHITECTURE.md  MODEL_PIPELINE.md  teardown.ko.md  teardown.md
models/: README.md
shared/: README.md
tests/: README.md  test_android_controller_contract.py  test_android_frontend_plan.py  test_cross_platform_frontend_backend.py  test_ios_feasibility.py  test_network_free_runtime_evidence.py  test_phase0_manifest.py  test_phase1_preparation.py  test_public_readme.py
tools/: README.md
(+131 files in other folders)
